# shiny-shell

./: .clang-format  .clangd  .gitignore  .qmlformat.ini  CMakeLists.txt  FIXME  README.md  TODO  default.nix  flake.nix  librebarcode-fonts.nix  meson.build  meson_options.txt  shell.qml
.zed/: tasks.json
Config/: AppearanceConfig.qml  BarConfig.qml  Config.qml  CornerConfig.qml  LocationConfig.qml  LockScreenConfig.qml  PlayerConfig.qml  WallpaperConfig.qml
Layers/Bar/: Bar.qml  PanelsHandler.qml
Layers/LockScreen/: Background.qml  Barcode.qml  GhostPasswordInput.qml  LockIndicator.qml  LockScreen.qml  LockSurface.qml  LockSurface2.qml
Layers/Wallpaper/: Wallpaper.qml  WallpaperImage.qml
Scripts/: _utils_.sh  extract-foreground.sh  find-location.sh  get-weather.sh
Services/: Battery.qml  Clock.qml  Foreground.qml  Host.qml  Location.qml  Player.qml  Weather.qml
Services/Models/: WeatherData.qml
Utils/: Env.qml  Paths.qml  Utils.qml
Widgets/: Icon.qml  RoundCorner.qml  ShinyClippingRectangle.qml  ShinyMouseArea.qml  ShinyRectangle.qml  ShinyText.qml  ShinyWindow.qml
components/: ShinyClippingRectangle.qml  ShinyIcon.qml  ShinyInteractiveLayer.qml  ShinyLayerWrapper.qml  ShinyMenu.qml  ShinyMouseArea.qml  ShinyShortcut.qml  ShinySlider.qml  ShinySwitch.qml  ShinyText.qml  ShinyTextArea.qml  ShinyTextField.qml
components/containers/: ShinyLayerWrapper.qml
components/controls/: ShinyButton.qml  ShinySlider.qml  ShinySplitButton.qml  ShinySwitch.qml  ShinyTextArea.qml  ShinyTextField.qml  ShinyTooltip.qml
components/effects/: ShinyElevatedLayer.qml
config/: AppearanceConfig.qml  BarConfig.qml  BrightnessConfig.qml  Config.qml  IdleConfig.qml  LauncherConfig.qml  LeftSidebarConfig.qml  LocaleConfig.qml  LocationConfig.qml  LockScreenConfig.qml  NotificationConfig.qml  OsdConfig.qml  OverviewConfig.qml  PlayerConfig.qml  SessionConfig.qml  WallpaperConfig.qml
dev/: greeter-vm.nix
layers/bar/: Bar.qml  BarModuleWrapper.qml
layers/corner/: RoundedCorner.qml  ScreenCorners.qml
layers/launcher/: Launcher.qml  LauncherBackend.qml  LauncherDrawer.qml  LauncherItem.qml
layers/left-sidebar/: LeftSidebar.qml
layers/left_sidebar/: LeftSidebar.qml  LeftSidebarDrawer.qml  NavigationBanner.qml
layers/lockscreen/: LockContext.qml  LockScreen.qml  LockSurface.qml
layers/notification_popups/: NotificationPopups.qml  PopupsLayer.qml
layers/osd/: Osd.qml  OsdLayer.qml  OsdTypeWrapper.qml
layers/overview/: Overview.qml  OverviewDrawer.qml  OverviewWindow.qml  OverviewWorkspace.qml
layers/session_control/: SessionButton.qml  SessionControl.qml  SessionControlDrawer.qml
layers/wallpaper/: Wallpaper.qml  WallpaperImage.qml
modules/: IdleManager.qml
nix/: default.nix  greeter.nix  hm-module.nix
plugin/: CMakeLists.txt  fuzzy.cpp  fuzzy.hpp  fuzzyengine.cpp  fuzzyengine.hpp  meson.build
plugin/booru/: CMakeLists.txt  data.cpp  data.hpp  provider.cpp  provider.hpp
plugin/booru/providers/: CMakeLists.txt  gelbooru.cpp  gelbooru.hpp  konanchan.cpp  konanchan.hpp
plugin/brightness/: CMakeLists.txt  device.cpp  device.hpp  manager.cpp  manager.hpp
plugin/dbus/: CMakeLists.txt  helpers.cpp  helpers.hpp  logindhandler.cpp  logindhandler.hpp  logindmanager.cpp  logindmanager.hpp  sleepinhibitor.hpp
plugin/greeter/: CMakeLists.txt  helpers.cpp  helpers.hpp
plugin/helpers/: CMakeLists.txt  icon.hpp
plugin/launcher/: CMakeLists.txt  delegate.cpp  delegate.hpp  item.cpp  item.hpp  plugin.cpp  plugin.hpp
plugin/launcher/plugins/: CMakeLists.txt  applications.cpp  applications.hpp  calculator.cpp  calculator.hpp  websearch.cpp  websearch.hpp
plugin/location/: CMakeLists.txt  geoclue-agent.cpp  geoclue-agent.hpp  location.cpp  location.hpp  org.freedesktop.GeoClue2.Client.xml  org.freedesktop.GeoClue2.Location.xml  org.freedesktop.GeoClue2.Manager.xml  provider.cpp  provider.hpp
plugin/screenshot/: CMakeLists.txt  manager.cpp  manager.hpp  org.freedesktop.portal.Screenshot.xml
plugin/services/: CMakeLists.txt  backgroundremoval.cpp  backgroundremoval.hpp  brightness.cpp  brightness.hpp  location.cpp  location.hpp  weather.cpp  weather.hpp
plugin/services/background-removal/: CMakeLists.txt  unit.cpp  unit.hpp
plugin/services/location/: CMakeLists.txt  data.cpp  data.hpp  provider.cpp  provider.hpp
plugin/services/weather/: CMakeLists.txt  data.cpp  data.hpp  provider.cpp  provider.hpp
plugin/session/: CMakeLists.txt  core.cpp  core.hpp  inhibitor.cpp  inhibitor.hpp  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Session.xml
scripts/: extract-foreground.nu  find-location.nu  get-weather.nu  shiny-hyprland-share-picker.sh  utils.nu
services/: Audio.qml  Battery.qml  Brightness.qml  Clock.qml  Foreground.qml  Location.qml  Notifications.qml  Player.qml  Session.qml  Weather.qml
services/models/: LocationData.qml  WeatherData.qml
shell/: .gitignore  CMakeLists.txt  greeter.qml  shell.qml
shell/components/: ShinyAnimatedText.qml  ShinyIcon.qml  ShinyInteractiveLayer.qml  ShinyText.qml
shell/config/: AppearanceConfig.qml  BarConfig.qml  BrightnessConfig.qml  Config.qml  LauncherConfig.qml  LocaleConfig.qml  NotificationConfig.qml  OsdConfig.qml  OverviewConfig.qml  RegionSelectorConfig.qml  ScreenRecorderConfig.qml  SessionConfig.qml  SharePickerConfig.qml  WallpaperConfig.qml
shell/services/: Audio.qml  Battery.qml  Brightness.qml  Host.qml  HyprCompositor.qml  Notifications.qml  Player.qml  ScreenRecorder.qml  Session.qml  Test.qml
shell/utils/: Colors.qml  Environment.qml  Formatting.qml  Helpers.qml  Icons.qml  Paths.qml
test/: greeter-vm.nix
utils/: Animations.qml  Colors.qml  Environment.qml  Formatting.qml  Icons.qml  Paths.qml  SoundEffects.qml  Utils.qml
utils/animations/: EffectColorAnimation.qml  EffectNumberAnimation.qml  EmphasizedInNumberAnimation.qml  EmphasizedOutNumberAnimation.qml  ExpressiveNumberAnimation.qml  (+10 more)
widgets/: ShinyAnimatedLayer.qml  ShinyClippingRectangle.qml  ShinyIcon.qml  ShinyMouseArea.qml  ShinyRectangle.qml  ShinySlider.qml  ShinyText.qml  ShinyTextField.qml  ShinyWindow.qml
(+126 files in other folders)
